ChangeLog
=========

1.1.0 (2014-08-08)
------------------

*New:*

   * New initialization syntax


1.0.1 (2014-04-13)
------------------

*Bugfix:*

    * Fix packaging (missing requirements files)

1.0.0 (2014-04-12)
------------------

*New:*

    * First version

.. vim:et:ts=4:sw=4:tw=79:ft=rst: