@@ -11,10 +11,10 @@ Reference
     :param str namespace: The namespace for all configuration entry lookups.
                           If an environment variable of ``<NAMESPACE>_CONFIG`` is set, the file at that path
                           will be loaded.
-    :param str config_files: List of paths of default configuration files to use.
-                             Provided configuration files are read in the order their name was provided,
-                             each overriding previous values. ``<NAMESPACE>_CONFIG`` takes precedence over
-                             all ``config_files`` contents.
+    :param list config_files: List of paths of default configuration files to use.
+                              Provided configuration files are read in the order their name was provided,
+                              each overriding previous values. ``<NAMESPACE>_CONFIG`` takes precedence over
+                              all ``config_files`` contents.
 
     .. method:: get(key[, default=''])
 
@@ -81,7 +81,7 @@ With the following setup:
 
     # test_config.py
     import getconf
-    config = getconf.ConfigGetter('getconf', config_files=['/etc/getconf/example.ini'])
+    config = getconf.ConfigGetter('getconf', ['/etc/getconf/example.ini'])
 
     print("Env: %s" % config.get('env', 'dev'))
     print("DB: %s" % config.get('db.host', 'localhost'))
